# wavelet_turbulence

./: CMakeLists.txt  EIGENVALUE_HELPER.h  FLUID_3D  FLUID_3D.cpp  FLUID_3D.h  FLUID_3D_SOLVERS.cpp  FLUID_3D_STATIC.cpp  GABOR_NOISE.h  IMAGE.h  INTERPOLATE.h  LU_HELPER.h  MERSENNETWISTER.h  OBSTACLE.h  SPHERE.cpp  SPHERE.h  VEC3.h  WAVELET_NOISE.h  WTURBULENCE.cpp  WTURBULENCE.h  main.cpp  noiseFFT.cpp
render/: render.pl
